2009-01-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home.c (hd_home_constructed): Add left and right switch
	to edit group. Fixes: NB#98209.

	* debian/changelog: Update.

2009-01-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update. NB#96219 is fixed, too.

2009-01-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view-container.c
	  (hd_home_view_container_update_views): Close all applets from a
	  deactivated view. Fixes: NB#95445, NB#94082

	* src/home/hd-home-view.c:
	* src/home/hd-home-view.h: Store applet data in a HashTable instead of
	  the object data.

	* src/home/hd-home.c (hd_home_applet_close_button_clicked,
	  hd_home_close_applet): Add function to close an applet.
	  (hide_cb, hd_home_show_applet_buttons,
	  hd_home_hide_applet_buttons): Use more mature method to hide the
	  close button together with the applet.
	* src/home/hd-home.h:

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unregister_client): Use a more
	mature methode to unregister an applet.

	* debian/changelog: Update.

2009-01-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home.c (hd_home_desktop_key_press): Fix calling from
	Home.

2009-01-18  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/hd-theme.c: Titlebar width is relative to size of status area.

2009-01-16  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-page.h
	* src/launcher/hd-launcher-grid.c
	* src/launcher/hd-launcher-grid.h
	* src/launcher/hd-launcher.c
	* src/home/hd-switcher.c
	* src/mb/hd-applet-layout-manager.c
	* src/mb/hd-status-menu.c
	* src/mb/hd-comp-mgr.h
	* src/mb/hd-status-area.c:
	Moved hard-coded references to screen width, height and button sizes
	to refer to the #defines in hd-comp-mgr
	* src/mb/hd-note.c:
	Made IncomingEventPreview notes keep their original size, and be
	positioned at the top of the screen - as per UI Layout guide
